argocd/oneuptime-app/000-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneuptime
  namespace: oneuptime
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - status-test.bacherik.de
    secretName: status-test-tls
  rules:
  - host: "status-test.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oneuptime-app-nginx
            port:
              number: 80
